--- a/ex4.html
+++ b/ex4.html
@@ -11,33 +11,39 @@
 
    <input type="text" id="inputText">
    <!-- add a button here for adding new item -->
-   <button id="btnAdd">Add</button>
-
+   <button id="btnAdd" onclick='addItem()'>Enter</button>
    <ul>
-      <li>Notebook<!--<button>Delete</button></li>-->
-      <li>Jello</li>
-      <li>Spinach</li>
-      <li>Rice</li>
-      <li>Birthday Cake</li>
-      <li>Candles</li>
+      <li>Notebook<button onclick="removeItem(this.parentNode)">Delete</button></li>
+      <li>Jello<button onclick="removeItem(this.parentNode)">Delete</button></li>
+      <li>Spinach<button onclick="removeItem(this.parentNode)">Delete</button></li>
+      <li>Rice<button onclick="removeItem(this.parentNode)">Delete</button></li>
+      <li>Birthday Cake<button onclick="removeItem(this.parentNode)">Delete</button></li>
+      <li>Candles<button onclick="removeItem(this.parentNode)">Delete</button></li>
    </ul>
 
    <script>
-      const btnElem = document.getElementById("btnAdd");
-      btnElem.addEventListener("click", addItem); 
-
 
       // add code here
-      function addItem(){
-         const newItem = document.getElementById("inputText").value;
+      function addItem() {
+         const newItemVal = document.getElementById('inputText').value;
          const ulElem = document.getElementsByTagName("ul")[0];
+         const liElem = document.createElement('li');
+         liElem.innerText = newItemVal;
+         
+         const btnElem = document.createElement('button');
+         btnElem.innerText = 'delete';
+         //btnElem.addEventListener('click', removeItem(btnElem.parentNode));
+         btnElem.addEventListener('click', function() {
+            liElem.remove();
+         });
 
-         const li= document.createElement("li");
-         li.textContent = newItem;
-         ulElem.appendChild(li);
+         liElem.appendChild(btnElem);
+         ulElem.appendChild(liElem);
       }
 
-
+      function removeItem(obj) {
+         obj.remove();
+      }
 
    </script>
 
